<resources>
    <string name="app_name">Asesores Labs</string>
    <string name="logo_desc">Logo</string>
    <string name="login_button">Ingresar</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="hint_pass">Contraseña</string>
    <string name="title_activity_index">Inicio</string>
    <string name="qr_scan">QR scan</string>
    <string name="man_search">Busqueda manual</string>
    <string name="recent">Recientes</string>
    <string name="logout">Salir</string>
    <string name="sucursal_label">Sucursal</string>
    <string name="area_label">Area</string>
    <string name="equipo_label">Equipo</string>
    <string name="searchButton">Buscar</string>

    <string name="escaneaQR">Enfoca el codigo QR para escanear</string>
    <string name="busquedaManual">Busqueda manual de equipo</string>
    <string name="verRecientes">Ver ultimos mantenimientos</string>
    <string name="cerrarSesion">Cerrar sesion</string>

    <string name="resultados">Resultados</string>
    <string name="title_activity_information">information</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Mantenimientos</string>
    <string name="tab_text_3">Graficas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
