<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".Index">

    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/scanButton"
                android:contentDescription="@string/qr_scan"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/scan" />

            <ImageButton
                android:id="@+id/searchButton"
                android:contentDescription="@string/man_search"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/search" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/recentButton"
                android:contentDescription="@string/recent"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/recent" />

            <ImageButton
                android:id="@+id/logoutButton"
                android:contentDescription="@string/logout"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logout" />
        </LinearLayout>
    </GridLayout>

</LinearLayout>